[project]
name = "pytabs"
authors = [{name = "Mitchell Tesch"}, {email = "mitchell.z.tesch@gmail.com"}]
description = "A python wrapper for the CSi ETABS .NET API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pythonnet"]
license_file = {file = "LICENSE"}
keyword = ["engineering", "structural-engineering", "computational-design", "finite-element-analysis", "ETABS", "API"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]


[project.optional-dependencies]
examples = ["pandas", "xlwings"]


[project.urls]
Homepage = "https://github.com/mitchell-tesch/pytabs"
Issues = "https://github.com/mitchell-tesch/pytabs/issues"
Repository = "https://github.com/mitchell-tesch/pytabs"


[tool.hatch.version]
path = "src/pytabs/__init__.py"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
