[project]
name = "pytabs"
description = "A python wrapper for the CSi ETABS .NET API"
readme = "README.md"
authors = [
    { name = "Mitchell tesch", email = "mitchell.z.tesch@gmail.com" }
]
license_file = {file = "LICENSE"}
keyword = ["engineering", "structural-engineering", "computational-design", "finite-element-analysis", "ETABS", "API"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.13"
dependencies = [
    "pythonnet>=3.0.5",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mitchell-tesch/pytabs"
Issues = "https://github.com/mitchell-tesch/pytabs/issues"
Repository = "https://github.com/mitchell-tesch/pytabs"

[project.optional-dependencies]
examples = [
    "pandas>=2.3.0",
    "xlwings>=0.33.15",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.hatch.version]
path = "src/pytabs/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

